Story submission mobile size fix  (#174)
Fixed issue of drop down fields in submissions page being to small for mobile by moving fields to a new line and expanding them when they reach a min width
Created a outer horizontal flex box that is divided into two vertical flex box columns
When the horizontal flex box reaches a min width, it changes to a vertical flexbox and allows the three drop down options to be on its own line and fully expand - Brandon

--- a/vera-react-app/src/components/StorySubmission/StorySubmission.css
+++ b/vera-react-app/src/components/StorySubmission/StorySubmission.css
@@ -1,3 +1,27 @@
+.input-outer-container {
+    display: flex;
+    margin: 3% 0px 1% 3%;
+}
+
+.inner-container-box {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin: 0px 3% 0px 0px;
+    width: 33%;
+}
+
+@media (max-width: 767px) {
+    .input-outer-container {
+        flex-direction: column;
+    }
+
+    .inner-container-box {
+        flex: none;
+        width: 97%;
+    }
+}
+
 #editor-container {
   height: 375px;
   padding: 5px;
@@ -10,16 +34,6 @@
   border-radius: 20px;
   background-color: white;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-
-.row1{
-  display: flex;
-  flex-direction:column;
-  margin: 0px 3% 0px 0px;
-  /* padding-top: 20px; */
-  /* padding-left: 20px; */
-  width: 33%;
-
 }
 
 .inputs {
